--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -17,4 +17,4 @@
       = link_to(t(:sign_up), signup_path) << " |" if can_signup?
       = link_to(t(:about), "#about", :rel => "facebox")
   %h3
-    = link_to("Fat Free CRM", root_path)
+    = link_to("Information Research Corporation", root_path)
